# bench

./: .gitignore  .pre-commit-config.yaml  completion.sh  pyproject.toml
lobe/: LICENSE  __init__.py  __init__.pyr  app.py  cli.py  exceptions.py  lobe.py
lobe/commands/: __init__.py  config.py  git.py  install.py  make.py  setup.py  update.py  utils.py
lobe/config/: __init__.py  common_site_config.py  lets_encrypt.py  nginx.py  procfile.py  production_setup.py  redis.py  site_config.py  supervisor.py  systemd.py
lobe/config/templates/: Procfile  bench_manager_nginx.conf  frappe_sudoers  nginx.conf  supervisor.conf
lobe/config/templates/systemd/: frappe-bench-frappe-default-worker.service  frappe-bench-frappe-long-worker.service  frappe-bench-frappe-schedule.service  frappe-bench-frappe-short-worker.service  frappe-bench-frappe-web.service  frappe-bench-node-socketio.service  frappe-bench-redis-cache.service  frappe-bench-redis-queue.service  frappe-bench-redis-socketio.service  frappe-bench-redis.target  frappe-bench-web.target  frappe-bench.target
lobe/patches/: __init__.py  patches.txt
lobe/patches/v5/: fix_backup_cronjob.py  fix_user_permissions.py  set_live_reload_config.py  update_archived_sites.py
lobe/playbooks/: create_user.yml  macosx.yml  site.yml
lobe/playbooks/roles/common/tasks/: macos.yml
lobe/playbooks/roles/lobe/tasks/: main.yml  setup_bench_production.yml  (+1 more)
lobe/tests/: test_base.py  test_init.py  test_setup_production.py  test_utils.py
lobe/utils/: __init__.py  app.py  cli.py  lobe.py  render.py  system.py  translation.py
(+2 files in other folders)
